firewall/iptables-now
# Generated by iptables-save v1.8.10 (nf_tables) on Mon Sep 16 17:43:59 2024
*filter
:INPUT DROP [2862:287799]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [640:53547]
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -j NFLOG --nflog-prefix "[default-drop]:"
-A INPUT -i eth1 -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
-A FORWARD -d 192.168.199.1/32 -p tcp -m tcp --dport 22 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -d 192.168.199.1/32 -p tcp -m tcp --dport 3000 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -d 192.168.199.7/32 -p tcp -m tcp --dport 49888 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -s 192.168.199.1/32 -o eth0 -j ACCEPT
-A FORWARD -d 192.168.199.1/32 -p tcp -m tcp --dport 8082 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -d 192.168.199.1/32 -p tcp -m tcp --dport 8080 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -d 192.168.199.6/32 -p tcp -m tcp --dport 80 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -d 192.168.199.6/32 -p tcp -m tcp --dport 80 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -d 192.168.199.6/32 -p tcp -m tcp --dport 5900 -m state --state NEW,RELATED -j ACCEPT
-A FORWARD -j NFLOG --nflog-prefix "\'FORWARD-DROP\'"
COMMIT
# Completed on Mon Sep 16 17:43:59 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Mon Sep 16 17:43:59 2024
*nat
:PREROUTING ACCEPT [3174:314214]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [212:17784]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A PREROUTING -p tcp -m tcp --dport 2222 -j DNAT --to-destination 192.168.199.1:22
-A PREROUTING -p tcp -m tcp --dport 3000 -j DNAT --to-destination 192.168.199.1:3000
-A PREROUTING -p tcp -m tcp --dport 49888 -j DNAT --to-destination 192.168.199.7:49888
-A PREROUTING -p tcp -m tcp --dport 49891 -j DNAT --to-destination 192.168.199.1:8082
-A PREROUTING -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.199.1:8080
-A PREROUTING -p tcp -m tcp --dport 6080 -j DNAT --to-destination 192.168.199.6:80
-A PREROUTING -p tcp -m tcp --dport 6080 -j DNAT --to-destination 192.168.199.6:80
-A PREROUTING -p tcp -m tcp --dport 5900 -j DNAT --to-destination 192.168.199.6:5900
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth1 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:32825
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:43212
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:40939
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:33793
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 32825 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 43212 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 40939 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 33793 -j SNAT --to-source :53
COMMIT
# Completed on Mon Sep 16 17:43:59 2024
