firewall/iptables-rules
# Generated by iptables-save v1.8.10 (nf_tables) on Mon Sep  2 08:24:01 2024
*nat
:PREROUTING ACCEPT [383:63307]
:INPUT ACCEPT [174:49939]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A PREROUTING -p tcp -m tcp --dport 2222 -j DNAT --to-destination 192.168.200.1:22
-A PREROUTING -p tcp -m tcp --dport 3000 -j DNAT --to-destination 192.168.200.1:3000
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth1 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:40939
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:33793
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 40939 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 33793 -j SNAT --to-source :53
COMMIT
# Completed on Mon Sep  2 08:24:01 2024
